feat: add database + kysely
